# vrp-annealing

./: .gitignore  README.md  pyproject.toml
reference/: README.txt  optimal_distances.json
tests/: test_basics.py
vrp/: __init__.py  __main__.py  constants.py  paths.py
vrp/cli/: batch_run.py  run_cvrp.py  run_vrptw.py
vrp/data/: __init__.py  instance.py
vrp/io/: __init__.py  reference.py  results.py
vrp/sa/: __init__.py  cvrp.py  cvrp_heuristics.py  engine.py  metrics.py  presets.py  vrptw.py  vrptw_heuristics.py
vrp/util/: run_output.py  seed.py
vrp/viz/: routes.py
算例/: C266_N100(1).TXT  C266_N20(1).TXT  C266_N40(1).TXT  C266_N60(1).TXT  C266_N80(1).TXT
